vlc 3.0.17.3 can't play hls with demux error

vlc 3.0.17.3 will report "adaptive demux error: Failed to create demuxer (nil) Unknown", when playing a hls radio and the first media url is an ad url with ts format.

The vlc log: https://www.dropbox.com/s/jrkdquf2fggnmdn/vlc_first_ad_ts_error.txt?dl=0

The first ad url file which I have download: https://www.dropbox.com/s/hqa0yc58amrxaxn/asset96_00002.ts?dl=0

Thanks.

Edited by Jb Zh