demux: adaptive: skip ID3 in front of any segment

more HLS crap FTW

refs #27441